@@ -39,6 +39,7 @@
  * #1384 (The ExprTk engine is not case-sensitive)
  * #1388 (Kolmogorov fails on a PythonDistribution)
  * #1390 (The doc for the `computeQuantile` method does not describe the optional `tail` argument)
+ * #1393 (SobolSimulationAlgorithm should be simpler)
  * #1403 (Python import otagrum throws an error)
  * #1404 (Bug in KrigingAlgorithm+hmat-oss)
  * #1405 (Most of the simulation algorithms for rare event fail on a coronavirus example)
